samples/_failures_safe/1761412769_b7c317_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc8b888c.c: In function ‘main’:
./samples/SAFE/__tmp_cc8b888c.c:200: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_cc8b888c.c:199:5: error: expected declaration or statement at end of input
  199 |     Token tokens[MAX_TOKENS
      |     ^~~~~
